<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".Tambah_data">

    <TextView
        android:text="@string/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/nama"
        android:hint="@string/masukkan_nama_anda_disini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="UselessLeaf" />

    <TextView
        android:text="@string/nama_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/produk"
        android:hint="@string/masukkan_nama_produk_disini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="UselessLeaf" />

    <TextView
        android:text="@string/jumlah_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/jumlah_produk"
        android:hint="@string/masukkan_jumlah_produk_disini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="UselessLeaf" />

    <TextView
        android:text="@string/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/harga"
        android:hint="@string/masukkan_harga_disini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        tools:ignore="UselessLeaf" />

    <Button
        android:text="@string/simpan_data"
        android:id="@+id/simpan_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>