<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/black"
        android:text="@string/nama_list"
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:text="@string/nama_produk_list"
        android:id="@+id/produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:text="@string/jumlah_produk_list"
        android:id="@+id/jumlah_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:text="@string/harga_list"
        android:id="@+id/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/edit"
            android:textColor="#FFFFFF"
            android:background="#519FE3"
            android:text="@string/edit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/hapus"
            android:textColor="#FFFFFF"
            android:background="#E37651"
            android:text="@string/hapus"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</LinearLayout>